# ChangeLog for net-irc/irssi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.171 2012/05/03 06:27:14 jdhore Exp $

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> irssi-0.8.15.ebuild,
  irssi-0.8.15-r1.ebuild, irssi-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  17 Nov 2011; Nathan Phillip Brink <binki@gentoo.org> irssi-9999.ebuild:
  Fix irssi-9999 to have IUSE=+perl.

  29 Oct 2011; Nathan Phillip Brink <binki@gentoo.org> irssi-0.8.15.ebuild,
  irssi-0.8.15-r1.ebuild, irssi-9999.ebuild:
  Drop blocker on net-irc/irssi-svn which was pkgmoved to net-irc/irssi.

  08 Sep 2011; Fabian Groffen <grobian@gentoo.org> irssi-0.8.15-r1.ebuild:
  Marked ~sparc-solaris

  27 Aug 2011; Fabian Groffen <grobian@gentoo.org> irssi-0.8.15-r1.ebuild:
  Run elibtoolize for modules on Darwin, bug #373129

*irssi-9999 (22 Jul 2011)

  22 Jul 2011; Nathan Phillip Brink <binki@gentoo.org> +irssi-9999.ebuild:
  Move irssi-svn-0.3 to irssi-999, stripping keywords and bumping it to EAPI=4.

*irssi-0.8.15-r1 (24 Jun 2011)

  24 Jun 2011; Nathan Phillip Brink <binki@gentoo.org>
  +irssi-0.8.15-r1.ebuild:
  Fix link error concerning -lncurses on prefix and import changes from
  prefix-overlay. Bump to EAPI=3.

  28 Aug 2010; Sven Wegener <swegener@gentoo.org> -irssi-0.8.14.ebuild,
  -irssi-0.8.15_rc1.ebuild:
  Cleanup.

  30 Apr 2010; Brent Baude <ranger@gentoo.org> irssi-0.8.15.ebuild:
  Marking irssi-0.8.15 ppc64 for bug 314639

  30 Apr 2010; Brent Baude <ranger@gentoo.org> irssi-0.8.15.ebuild:
  Marking irssi-0.8.15 ppc for bug 314639

  24 Apr 2010; Raúl Porcel <armin76@gentoo.org> irssi-0.8.15.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable wrt #314639

  23 Apr 2010; Tobias Heinlein <keytoaster@gentoo.org> irssi-0.8.15.ebuild:
  amd64 stable, security bug #314639

  23 Apr 2010; Jeroen Roovers <jer@gentoo.org> irssi-0.8.15.ebuild:
  Stable for HPPA (bug #314639).
