@@ -1,6 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST irssi-0.8.15.tar.bz2 948847 SHA256 c12d16fb605103d7c256ddce44012dc396af57f3771e086d0387c195a052a0a6 SHA512 cecda925ae7c422fd95e8e94a123be8732a59a3a3c5d149b2fe16e1cac78cc516acb7a89ad79cf4ac0c412c9d4d3ea83fe5c0535ab6428e98479dc8909d0615a WHIRLPOOL 67c9f3f995d7d2e58b61c88d00bf4b5b7bb30181b143deac23a701422bdb5857642d346f34c75307954064da4f21752bd1f860da69446554c2658db3f28163f3
-EBUILD irssi-0.8.15-r1.ebuild 1455 SHA256 bc5065f287e7755ae4edc5a382e94ba250d68ebe9ac9f689e13eb276b1dcf785 SHA512 fe1c8cc8d4b2d4218415a200e1ebb289560cf15f0b9195ed80732971b8307b6ad2199af1f6e3b711852e202692db8793fd308414295bc9b8998d994c1af0df35 WHIRLPOOL 196b3b5ba69910e3e3f8479c987787bd574be0d13f373f2457ed0479a600c2994b69b690ff18e422663013438d3a963d9aef5e19bd76b1edc6b376a81b5e9b75
+EBUILD irssi-0.8.15-r1.ebuild 1401 SHA256 b55535a26c8d78416338ffa98c69942bcd556d180a08d9961097109c3683f5b4 SHA512 1c86c3b4e030fbc73120b45b583a9af5688319b12c0a7636ed05a176084ad4ad1ca919bd6d679b51230253fb5b104c600475d9867b63d2937526e906d402dca9 WHIRLPOOL b2ac194538b76a5717ec90a4078d0235773f9e47e19169c3e9876c417c4db7143ddc5a9876270a4cb2430b0f2e0730304b627afb73f93c6855ddb1a4df941fbe
 EBUILD irssi-0.8.15.ebuild 1272 SHA256 979bab61a033281489f325711a3f56d0d1d3b697b9a2a46bbd6a797cba993b5b SHA512 1df4624445a3f3c0e36dae7e8da2208b62b7f2fd9f27be03ae9c0b1e7c4f5d6b9f568b0e6d4da751e8f1c6fe4d4505d91f3dde9fcdf9452d316dc63c39c5a169 WHIRLPOOL fe8523c709bacd6167351da4e74e1b39980d845524381e28fa8f0fe5a604d7dd677c75e9f1e80f966b22e52566fd5ccf4edd9abc71844d2d08d1e9f7ffeb37ef
-EBUILD irssi-9999.ebuild 1325 SHA256 412600ec6db325942ad28e442086218f5eaef1fe632db4eaf025d936c212e755 SHA512 1397c29d855d13e47b9219d36b8397da543f1bf6802570534590f99f474ff035b94c2ac2738649ef8ed81139ad6fad6c7a96286c19289887b905e6f5c556b613 WHIRLPOOL fa022f6ff693d6a12031c9b1260acd6c4a7b544c9a882c53db359c210c13d54c37f27f1700cd105c892980fb807093631a25b850a801f347568a1d053a468ad7
-MISC ChangeLog 23204 SHA256 13a60bddc77ccc637056256a2d98cebfe9357bfe376f3077f7ba414d0b9c6e90 SHA512 62f638a9ffe491045fc0c56e8b63114855055b53526dfa94a2ae2f9f83acdc2333bcda5fd9c0eb2e02ebb0e0cb149bb3068362be065cfd3b3d191fa7c509980f WHIRLPOOL a2a67b4d8adeb0136cbd0f43ae933900d3e95f8b0c22964c7204347bd5080f91d80dab648067837ba473faec4d957263dfbc70b7e65b6d4e018561fcf4536b7a
+EBUILD irssi-9999.ebuild 1322 SHA256 559a8ed58dd4bf56704ebe3e94f8da5279fa3eecfc8e10c0c6d759707aae4a15 SHA512 6c6f624f707f57e057279003f3120099e7186cafadee1efa68f50e75680a7485b77a333077797cd3bdae06441b24ac8399234de863ad27b975f70813a2601c7d WHIRLPOOL e7d31ecbf283d8db26a9bc76a95df663fef6cb6f5ac83016f53953efc2c3cfedf8cef9214a02f957d8161df86ca419038747f25fa52bbc7649e4be6306b68ae7
+MISC ChangeLog 23343 SHA256 6ca909c997aa9c50cbcd5a47f35edc959096af4145a9e431a5e842153ecaa7fc SHA512 0d425f305cb23a517282460489bd2acca2a14c831f5f92bdfcab239415ecc24199147ba8ff56812629acad94a37d170562023dfa02c16a63b3da9d007fdecec7 WHIRLPOOL 3d17ac0e9cc6644441b51cc482fa3dc48def4cd2baaeace4097ee3f32c36dea10ee9aa61880c2e1098ca53d73316459a8cf156703605a0ebaf962dd1d3a1ae3d
 MISC metadata.xml 270 SHA256 4962741e0eded229c8ac0cca6dc8fed203d9b63ed7d8de546c661e6661579c75 SHA512 d5854a0d3b4ba749b35e980202f1bb430bb0ffe7de651d381e52b59407486fb0b32bca09f9cbfcd1c94896e90c822eb3f425f28190b680a56b0bbb802933a781 WHIRLPOOL 375e0a25bf1b6bb3212c7a9ce1f0f03b10f6fabf4ebe3007c28a43d92a92e7ce3a2d51d591ddc86caa1c368c6daebff62847792078983371528859a11b0a2a7b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQZtWLAAoJEOTDgjZ80txdt08H/jzF+IicFtVyMAlt8I9n7d36
+QCSNYQoqE8M4jw3NQgWbcjWRbZuZEqHoGf00NqNKUCKHX/NuXR2rPnMzUDwwhyat
+Mq2rvOZAnAHvsCuxf7P6Jqyfd8ZjpscRsHZ2LQvd5FJWYGjNe9QIoINQkfKvEgZh
+lO/f7EpS/WTSbvC/2YdEBPL6673glZj44fLznUoag0LsZzmr23th3Yqbg5VGX0yx
+RUd8JOdsTQrqlWPZ5VL5kiw6/ERYazzk83cAwko9Kor4mCI+Ug0yodvxMRnVyjlR
+FETKeebvttFjeYVG0o1bBL6Y0EqrTmvS9efHDeat/7gHjdrUQnZvncVzuzLU1bw=
+=h3GQ
+-----END PGP SIGNATURE-----
