@@ -1,8 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/irssi-0.8.15-r1.ebuild,v 1.5 2012/05/03 06:27:14 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/irssi-0.8.15-r1.ebuild,v 1.6 2012/09/29 11:04:12 ago Exp $
 
-EAPI=3
+EAPI=4
 
 inherit perl-module libtool
 
@@ -19,7 +19,7 @@ KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
 IUSE="ipv6 +perl ssl socks5"
 
 RDEPEND="sys-libs/ncurses
-	>=dev-libs/glib-2.2.1
+	>=dev-libs/glib-2.6.0
 	ssl? ( dev-libs/openssl )
 	perl? ( dev-lang/perl )
 	socks5? ( >=net-proxy/dante-1.1.18 )"
@@ -50,9 +50,9 @@ src_install() {
 	emake \
 		DESTDIR="${D}" \
 		docdir="${EPREFIX}"/usr/share/doc/${PF} \
-		install || die "make install failed"
+		install
 
 	use perl && fixlocalpod
 
-	dodoc AUTHORS ChangeLog README TODO NEWS || die "dodoc failed"
+	dodoc AUTHORS ChangeLog README TODO NEWS
 }
