@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/irssi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.171 2012/05/03 06:27:14 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.172 2012/09/29 11:04:12 ago Exp $
+
+  29 Sep 2012; Agostino Sarubbo <ago@gentoo.org> irssi-0.8.15-r1.ebuild,
+  irssi-9999.ebuild:
+  eapi4 + fix glib version, wrt to bug #404471
 
   03 May 2012; Jeff Horelick <jdhore@gentoo.org> irssi-0.8.15.ebuild,
   irssi-0.8.15-r1.ebuild, irssi-9999.ebuild:
